--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Leo Suzuki - Resume - Bootstrap Theme</title>
+        <!--meta name="description" content="" /-->
+        <!--meta name="author" content="" /-->
+        <title>My personal CV page</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (new free version)-->
         <script src="https://kit.fontawesome.com/b0e1fc8fcd.js" crossorigin="anonymous"></script>
@@ -19,13 +19,13 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Leo Suzuki</span>
+                <span class="d-block d-lg-none"></span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/c.jpeg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Who Am I?</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">ABOUT</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
@@ -43,28 +43,30 @@
                         Leo
                         <span class="text-primary">Suzuki</span>
                     </h1>
+                    <div>
+                        <h3><br><span id="typed"></span></h3>
+                    </div>
                     <div class="subheading mb-5">
-                        From Japan · live in Tampere Finland · 
-                        <a href="mailto:name@email.com">leona.suzuki@tuni.fi</a>
-                    <!-- Esittelyosio-->
+                        <a href="mailto:leona.suzuki@tuni.fi">leona.suzuki@tuni.fi</a>
+                    <!-- Esittelyosio -->
                     </div>
                     <p class="lead mb-3">I am an IT engineering student at TAMK, graduated from TPA / Sasky's software developer training.
                          I'm an Ex. entrepreneur for 15 years and accumulated versatile work experience.</p>
                     <p class="lead mb-3">I am comfortable with people for whom it is important to finish the job properly.
                         I am good at reading customers' needs and I know how to act customer-oriented while respecting the company's strategy.
                         I'm not afraid of exceptions, because I've learned to prioritize things and figure out the overall picture during my time as an entrepreneur.</p>
-                    <!-- Yhteysosio-->
+                    <!-- Yhteysosio -->
                     <div class="social-icons">
                         <a class="social-icon" href="mailto:leona.suzuki@tuni.fi"><i class="fa fa-send-o"></i></a>
                         <a class="social-icon" href="https://github.com/LeoSuzu"><i class="fa fa-github"></i></a>
                         <a class="social-icon" href="https://www.linkedin.com/in/leo-suzuki-60b25759/"><i class="fa fa-linkedin"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/leo.suzu"><i class="fa fa-facebook"></i></a>
-                        <a class="social-icon" href="./img/..."><i class="fa fa-file-pdf-o"></i></a>
+                        <a class="social-icon" ><i class="fa fa-file-pdf-o"></i></a>
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Kokemuksetosio-->
+            <!-- Kokemuksetosio -->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
@@ -143,18 +145,30 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
+                    <h2 class="mb-5">EDUCATION & EXPERIENCE</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div>
+                        <img src="assets/img/brand_python_icon_157826.png" class="logos" alt="python">
+                        <img src="assets/img/cplusplus_logo_icon_247265.png" class="logos" alt="C++">
+                        <img src="assets/img/2333390-html-html5-internet-website_85590.png" class="logos" alt="HTML">
+                        <img src="assets/img/javascript_logo_icon_145155.png" class="logos" alt="Javascript">
+                    </div>
+                    <div style="margin-top: 10px">
+                        <img src="assets/img/github-logo_icon-icons.com_73546.png" class="logos" alt="Github">
+                        <img src="assets/img/unity_logo_icon_144772.png" class="logos" alt="Unity">
+                        <img src="assets/img/adobe_photoshop_icon_132617.png" class="logos" alt="Photoshop">
+                        <img src="assets/img/adobe_indesign_icon_132620.png" class="logos" alt="Indesign">
+                    </div>
+                    <!-- UNUSED SECTION
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-c"></i></li>
-                        <!-- <li class="list-inline-item"><i class="fab fa-node"></i></li> -->
+                        <li class="list-inline-item"><i class="fab fa-python " style="color: #000000"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-c" style="color: #000000"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-html5" style="color: #000000"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square" style="color: #000000"></i></li>
+                        < <li class="list-inline-item"><i class="fab fa-node"></i></li>
                     </ul>
-                    <!--
-                        <div class="subheading mb-3">Workflow</div>
+                    -->
+                    <div class="subheading mb-3" style="margin-top: 20px">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -173,7 +187,6 @@
                             Agile Development & Scrum
                         </li>
                     </ul>
-                    -->
                 </div>
             </section>
             <hr class="m-0" />
@@ -192,7 +205,7 @@
             <section class="resume-section" id="projects">
                 <div class="Project examples">
                     <h2 class="mb-5">My projects</h2>
-                    <!-- Awards element
+                    <!-- Awards element-->
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
@@ -233,7 +246,6 @@
                             Place - James Buchanan High School - Hackathon 2005
                         </li>
                     </ul>
-                    -->
                 </div>
             </section>
         </div>
@@ -241,5 +253,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="js/typed.js"></script>
     </body>
 </html>
