--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <!--meta name="description" content="" /-->
-        <!--meta name="author" content="" /-->
+        <meta name="description" content="My personal CV page / created with bootstrap template but adding some own elements" />
+        <meta name="Leo Suzuki" content="" />
         <title>My personal CV page</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (new free version)-->
