--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                 <div class="Project examples">
                     <h2 class="mb-6">PROJECTS</h2>
                     <!-- PROJECT element-->
-                    <div class="container" style="width: 35vw">
-                        <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000" data-bs-pause="hover">
+                    <div class="container" style="width: 700px; height: 500px">
+                        <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000" data-bs-pause="hover">
                             <!-- Indicators -->
                             <ol class="carousel-indicators">
                                 <li data-bs-target="#projectCarousel" data-bs-slide-to="0" class="active"></li>
@@ -277,24 +277,26 @@
                             <!-- Slides -->
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="path/to/project1.gif" class="d-block w-100" alt="Project 1">
                                     <div class="carousel-caption">
-                                        <h5>Project 1</h5>
-                                        <p>Description of Project 1</p>
+                                        <h5 class="project-name">Weather app</h5>
+                                        <p class="project-description">Weather app showing current weather and local picture</p>
                                     </div>
+                                    <img src="project_samples/search-example.gif" class="carousel-image" alt="Project 1" style="height: 100%">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="path/to/project2.gif" class="d-block w-100" alt="Project 2">
                                     <div class="carousel-caption">
-                                        <h5>Project 2</h5>
-                                        <p>Description of Project 2</p>
+                                        <h5 class="project-name">Art Maker3 python</h5>
+                                        <p class="project-description">Simple art maker made with turtle graphics and colorgram </p>
                                     </div>
+                                    <video width="700" height="500" autoplay>
+                                        <source src="project_samples/sample.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="path/to/project3.gif" class="d-block w-100" alt="Project 3">
                                     <div class="carousel-caption">
-                                        <h5>Project 3</h5>
-                                        <p>Description of Project 3</p>
+                                        <h5 class="project-name">Coming soonn</h5>
+                                        <p class="project-description">Coming soon</p>
                                     </div>
                                 </div>
                                 <!-- Add more slides as needed -->
