Sample video added to project section

--- a/index.html
+++ b/index.html
@@ -278,18 +278,21 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="carousel-caption">
-                                        <h5 class="project-name">Weather app</h5>
+                                        <h5 class="project-name">Simple Weather app</h5>
                                         <p class="project-description">Weather app showing current weather and local picture</p>
                                     </div>
-                                    <img src="project_samples/search-example.gif" class="carousel-image" alt="Project 1" style="height: 100%">
+                                    <video width="700" height="500" autoplay>
+                                        <source src="project_samples/weather_app.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="carousel-caption">
-                                        <h5 class="project-name">Art Maker3 python</h5>
+                                        <h5 class="project-name">Python Art Maker3</h5>
                                         <p class="project-description">Simple art maker made with turtle graphics and colorgram </p>
                                     </div>
                                     <video width="700" height="500" autoplay>
-                                        <source src="project_samples/sample.mp4" type="video/mp4">
+                                        <source src="project_samples/python_art_maker3.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                 </div>
