Commit pull back

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="My personal CV page / created with bootstrap template but adding some own elements" />
+        <meta name="description" content="My personal CV page" />
         <meta name="Leo Suzuki" content="" />
         <title>My personal CV page</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
@@ -265,7 +265,7 @@
                 <div class="Project examples">
                     <h2 class="mb-6">PROJECTS</h2>
                     <!-- PROJECT element-->
-                    <div class="container" style="width: 700px; height: 500px">
+                    <div class="container" style="width: 500px; height: 350px">
                         <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000" data-bs-pause="hover">
                             <!-- Indicators -->
                             <ol class="carousel-indicators">
