--- a/index.html
+++ b/index.html
@@ -262,11 +262,11 @@
             <hr class="m-0" />
             <!-- Project example with snapshot or gif -->
             <section class="resume-section" id="projects">
-                <div class="Project examples">
+                <div class="Project examples" style="flex-shrink: initial">
                     <h2 class="mb-6">PROJECTS</h2>
                     <!-- PROJECT element-->
-                    <div class="container" style="width: 500px; height: 350px">
-                        <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000" data-bs-pause="hover">
+                    <div class="container">
+                        <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000" data-bs-pause="hover" style="width: auto">
                             <!-- Indicators -->
                             <ol class="carousel-indicators">
                                 <li data-bs-target="#projectCarousel" data-bs-slide-to="0" class="active"></li>
