--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>My personal CV page</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (new free version)-->
-        <script src="https://kit.fontawesome.com/b0e1fc8fcd.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="assets/fontawesome-free-6.4.0-web/css/all.min.css">
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
@@ -67,11 +67,12 @@
                     </div>
                     <!-- Personal information, sosial media, CV, github -->
                     <div class="social-icons">
-                        <a class="social-icon" href="mailto:leona.suzuki@tuni.fi"><i class="fa fa-send-o"></i></a>
-                        <a class="social-icon" href="https://github.com/LeoSuzu" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a>
-                        <a class="social-icon" href="https://www.linkedin.com/in/leo-suzuki-60b25759/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin"></i></a>
+                        <a class="social-icon" href="mailto:leona.suzuki@tuni.fi"><i class="fas fa-paper-plane"></i></a>
+                        <a class="social-icon" href="https://github.com/LeoSuzu" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/leo-suzuki-60b25759/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
                         <a class="social-icon" href="assets/CV/cv_leo_suzuki.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-file-lines"></i></a>
-                        <a class="social-icon" href="assets/CV/cv_leo_suzuki.pdf" download><i class="fa fa-file-arrow-down"></i></a>
+                        <a class="social-icon" href="assets/CV/cv_leo_suzuki.pdf" download><i class="fa-solid fa-file-arrow-down"></i></a>
+                        <a class="social-icon" href="tel:+358440122110"><i class="fa-solid fa-mobile-screen-button"></i></a>
                     </div>
                 </div>
             </section>
