Few design changes. Added responsive features

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="subheading mb-3">
                         <a href="mailto:leona.suzuki@tuni.fi">leona.suzuki@tuni.fi</a>
                     </div>
-                    <div style="margin-bottom: 30px" class="lead mb-1">
+                    <div class="lead mb-1">
                         <p>I am an IT engineering student at Tampere University of Applied Sciences and graduated from Sasky's software developer training.
                             With 15 years of entrepreneurial experience in the service sector, I have acquired versatile skills.</p>
                         <p>I prioritize thorough job completion and excel in understanding and meeting customer needs while aligning with company strategies.</p>
@@ -268,13 +268,6 @@
                     <!-- PROJECT element-->
                     <div class="container">
                         <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000" data-bs-pause="hover" style="width: auto">
-                            <!-- Indicators -->
-                            <ol class="carousel-indicators">
-                                <li data-bs-target="#projectCarousel" data-bs-slide-to="0" class="active"></li>
-                                <li data-bs-target="#projectCarousel" data-bs-slide-to="1"></li>
-                                <li data-bs-target="#projectCarousel" data-bs-slide-to="2"></li>
-                                <!-- Add more indicators as needed -->
-                            </ol>
                             <!-- Slides -->
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
@@ -299,13 +292,24 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="carousel-caption">
-                                        <h5 class="project-name">Coming soonn</h5>
-                                        <p class="project-description">Coming soon</p>
+                                        <h5 class="project-name">Coming soon</h5>
+                                        <p class="project-description">Simple reservation system C++</p>
                                     </div>
+                                    <video width="700" height="500" autoplay>
+                                        <source src="project_samples/python_art_maker3.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
                                 </div>
                                 <!-- Add more slides as needed -->
                             </div>
                             <!-- Controls -->
+                            <!-- Indicators -->
+                            <ol class="carousel-indicators">
+                                <li data-bs-target="#projectCarousel" data-bs-slide-to="0" class="active"></li>
+                                <li data-bs-target="#projectCarousel" data-bs-slide-to="1"></li>
+                                <li data-bs-target="#projectCarousel" data-bs-slide-to="2"></li>
+                                <!-- Add more indicators as needed -->
+                            </ol>
                             <button class="carousel-control-prev" type="button" data-bs-target="#projectCarousel" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
