Few design changes. Added responsive features

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                         <h5 class="project-name">Simple Weather app</h5>
                                         <p class="project-description">Weather app showing current weather and local picture</p>
                                     </div>
-                                    <video width="700" height="500" autoplay>
+                                    <video class="carousel-video" autoplay>
                                         <source src="project_samples/weather_app.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
@@ -285,7 +285,7 @@
                                         <h5 class="project-name">Python Art Maker3</h5>
                                         <p class="project-description">Simple art maker made with turtle graphics and colorgram </p>
                                     </div>
-                                    <video width="700" height="500" autoplay>
+                                    <video class="carousel-video" autoplay>
                                         <source src="project_samples/python_art_maker3.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
@@ -295,7 +295,7 @@
                                         <h5 class="project-name">Coming soon</h5>
                                         <p class="project-description">Simple reservation system C++</p>
                                     </div>
-                                    <video width="700" height="500" autoplay>
+                                    <video class="carousel-video" autoplay>
                                         <source src="project_samples/python_art_maker3.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
