--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="carousel-caption">
-                                        <h5 class="project-name">Simple Weather app</h5>
+                                        <h5 class="project-name"><a href="https://github.com/LeoSuzu/weather_app">Weather app</a></h5>
                                         <p class="project-description">Weather app showing current weather and local picture</p>
                                     </div>
                                     <video class="carousel-video" autoplay>
@@ -282,8 +282,8 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="carousel-caption">
-                                        <h5 class="project-name">Python Art Maker3</h5>
-                                        <p class="project-description">Simple art maker made with turtle graphics and colorgram </p>
+                                        <h5 class="project-name"><a href="https://github.com/LeoSuzu/Art_maker3_python">Python Art Maker3</a></h5>
+                                        <p class="project-description">Art maker made with turtle graphics and colorgram</p>
                                     </div>
                                     <video class="carousel-video" autoplay>
                                         <source src="project_samples/python_art_maker3.mp4" type="video/mp4">
@@ -292,11 +292,11 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="carousel-caption">
-                                        <h5 class="project-name">Coming soon</h5>
-                                        <p class="project-description">Simple reservation system C++</p>
+                                        <h5 class="project-name"><a href="https://github.com/LeoSuzu/hote_reservation_finnish_cplus">Resevation system c++</a></h5>
+                                        <p class="project-description">Reservation system C++ / Finnish. No GUI</p>
                                     </div>
                                     <video class="carousel-video" autoplay>
-                                        <source src="project_samples/python_art_maker3.mp4" type="video/mp4">
+                                        <source src="project_samples/hotel_res_cplus.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                 </div>
