--- a/index.html
+++ b/index.html
@@ -267,35 +267,38 @@
                     <h2 class="mb-6">PROJECTS</h2>
                     <!-- PROJECT element-->
                     <div class="container">
-                        <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000" data-bs-pause="hover" style="width: auto">
+                        <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="30000" data-bs-pause="hover" style="width: auto">
                             <!-- Slides -->
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="carousel-caption">
-                                        <h5 class="project-name"><a href="https://github.com/LeoSuzu/weather_app">Weather app</a></h5>
+                                        <h5 class="project-name"><a href="project_samples/weather_app.mp4" download>Weather app</a></h5>
+                                        <p class="click_to_download">Click title for download video</p>
                                         <p class="project-description">Weather app showing current weather and local picture</p>
                                     </div>
-                                    <video class="carousel-video" autoplay>
+                                    <video class="carousel-video" autoplay loop>
                                         <source src="project_samples/weather_app.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="carousel-caption">
-                                        <h5 class="project-name"><a href="https://github.com/LeoSuzu/Art_maker3_python">Python Art Maker3</a></h5>
+                                        <h5 class="project-name"><a href="project_samples/python_art_maker3.mp4" download>Python Art Maker3</a></h5>
+                                        <p class="click_to_download">Click title for download video</p>
                                         <p class="project-description">Art maker made with turtle graphics and colorgram</p>
                                     </div>
-                                    <video class="carousel-video" autoplay>
+                                    <video class="carousel-video" autoplay loop>
                                         <source src="project_samples/python_art_maker3.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="carousel-caption">
-                                        <h5 class="project-name"><a href="https://github.com/LeoSuzu/hote_reservation_finnish_cplus">Resevation system c++</a></h5>
+                                        <h5 class="project-name"><a href="project_samples/hotel_res_cplus.mp4" download>Resevation system c++</a></h5>
+                                        <p class="click_to_download">Click title for download video</p>
                                         <p class="project-description">Reservation system C++ / Finnish. No GUI</p>
                                     </div>
-                                    <video class="carousel-video" autoplay>
+                                    <video class="carousel-video" autoplay loop>
                                         <source src="project_samples/hotel_res_cplus.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
