Few text changes

--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-6">WORKING&nbsp;KNOWLEDGE&nbsp;OF</h2>
-                    <div class="h3">Working knowledge of</div>
-                    <div class="h3">Programming Languages & Tools</div>
+                    <div class="h3">Working knowledge of programming Languages & Tools</div>
                     <div>
                         <img src="assets/img/brand_python_icon_157826.png" class="logos" alt="python">
                         <img src="assets/img/cplusplus_logo_icon_247265.png" class="logos" alt="C++">
@@ -253,11 +252,16 @@
                     <div class="h3">INTERESTS & HOBBIES</div>
                     <div>
                         As a perpetual student of software/web development, I embark on thrilling adventures abroad whenever I can (because debugging code isn't quite the same as exploring ancient ruins!).
+                    </div>
+                    <div>
                         When confined indoors, I immerse myself in the captivating world of Japanese cinema and TV shows.
                         But that's not all—I'm a master builder and fixer of RC cars and planes, providing endless fun for my little one.
+                    </div>
                         And let's not forget my commitment to being on the cutting edge of front-end and back-end development—I practically have a permanent seat in the technology realm.
                         Oh, and did I mention I'm also a seasoned chef and restaurant owner? The kitchen is my sanctuary, where my culinary creations become works of art. ITADAKIMASU!
-                </div>
+                    <div>
+
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
