Intriduction section reformed

--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
+                    <!-- NAME -->
                     <h1 class="mb-0">
                         Leo
                         <span class="text-primary">Suzuki</span>
                     </h1>
+                    <h3>ICT engineer, software developer and embedded systems</h3>
                     <div>
+                        <!-- Typing text (changing all the time / J.Script)-->
                         <h3><br><span id="typed"></span></h3>
                     </div>
                     <!-- Presentation -->
@@ -60,10 +63,11 @@
                         <a href="mailto:leona.suzuki@tuni.fi">leona.suzuki@tuni.fi</a>
                     </div>
                     <div class="lead mb-1">
-                        <p>I am an IT engineering student at Tampere University of Applied Sciences and graduated from Sasky's software developer training.
-                            With 15 years of entrepreneurial experience in the service sector, I have acquired versatile skills.</p>
-                        <p>I prioritize thorough job completion and excel in understanding and meeting customer needs while aligning with company strategies.</p>
-                        <p>My entrepreneurial background has honed my ability to handle exceptions and prioritize tasks effectively, enabling me to see the bigger picture.</p>
+                        <p>I am currently pursuing a degree in IT Engineering at Tampere University of Applied Sciences and have successfully completed Sasky's Software Developer training.
+                            With 15 years of entrepreneurial experience in the service sector, I have developed a wide range of versatile skills.</p>
+                        <p>I have a proven track record of delivering projects on time, both in team and individual settings. My commitment to thorough job completion,
+                            coupled with my ability to collaborate effectively, allows me to consistently meet customer needs while aligning with company strategies.</p>
+                        <p>My entrepreneurial background has strengthened my ability to handle exceptions and effectively prioritize tasks, allowing me to maintain a broader perspective.</p>
                     </div>
                     <!-- Personal information, sosial media, CV, github -->
                     <div class="social-icons">
