--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                         <a class="social-icon" href="mailto:leona.suzuki@tuni.fi"><i class="fas fa-paper-plane"></i></a>
                         <a class="social-icon" href="https://github.com/LeoSuzu" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.linkedin.com/in/leo-suzuki-60b25759/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="assets/CV/cv_leo_suzuki.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-file-lines"></i></a>
-                        <a class="social-icon" href="assets/CV/cv_leo_suzuki.pdf" download><i class="fa-solid fa-file-arrow-down"></i></a>
+                        <a class="social-icon" href="assets/CV/cv_LeoSuzu.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-file-lines"></i></a>
+                        <a class="social-icon" href="assets/CV/cv_LeoSuzu.pdf" download><i class="fa-solid fa-file-arrow-down"></i></a>
                         <a class="social-icon" href="tel:+358440122110"><i class="fa-solid fa-mobile-screen-button"></i></a>
                     </div>
                 </div>
