Data changed. Need to fix size scale for moble devices in Project section.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         Leo
                         <span class="text-primary">Suzuki</span>
                     </h1>
-                    <h3>ICT engineer, software developer and embedded systems</h3>
+                    <p>ICT engineer, software developer and embedded systems</p>
                     <div>
                         <!-- Typing text (changing all the time / J.Script)-->
                         <h3><br><span id="typed"></span></h3>
@@ -88,10 +88,12 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Beiz Oy</h3>
+                            <a href="https://lolapanda.com/about-beiz/">About Beiz Oy</a>
                             <div class="subheading mb-3">Game developing and testing</div>
-                            <p>After testing the company's game libraries in Japanese, English, and Finnish,
-                                I collaborated with my work partner to develop the game 'Lola's Fruit Sudoku' using the Unity game engine and C# language.</p>
-                            <a href="https://lolapanda.com/fi/oppimispelit/lolan-hedelmasudoku/">Lola's fruit sudoku</a>
+                            <p>
+                                After conducting extensive testing of the company's game libraries in Japanese, English, and Finnish,
+                                 I collaborated with my colleague to develop the game 'Lola's Fruit Sudoku' using the Unity game engine and C#.
+                            </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">3/2021 - 12/2021</span></div>
                     </div>
@@ -99,8 +101,10 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Brunakärrs energi Oy</h3>
                             <div class="subheading mb-3">Website and CRM</div>
-                            <p>I built a legal company focused on energy solutions, handling website creation and CRM.
-                                I developed a user-friendly customer management system that enables easy customer registration and relationship management.</p>
+                            <p>
+                                I established a legal company specializing in energy solutions, where I managed website development and CRM.
+                                Additionally, I designed a user-friendly customer management system to facilitate effortless customer registration and relationship management.
+                            </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"> 10/2020 - 1/2021</span></div>
                     </div>
@@ -153,21 +157,22 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">TAMK - University of Applied Sciences</h3>
                             <div class="subheading mb-1">Bachelor of Engineering in ICT</div>
-                            <div>Computer Science - Bachelor of Engineering</div>
+                            <div>Major: Computer Science and software development</div>
+                            <div>Secondary focus: Embedded Systems</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">8/2022 - on going</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">In progress since 8/2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">SASKY / TPA</h3>
+                            <h3 class="mb-0">TPA / SASKY Municipal Education and Training Consortium</h3>
                             <div class="subheading mb-1">Software developer</div>
                             <div>Vocational qualification in Information and Communications Technology</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">08/2020 - 12/2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Completed 08/2020 - 12/2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Tampereen yhteiskoulu - High School</h3>
+                            <h3 class="mb-0">Tampere Arts-Oriented Senior Secondary School (TYK)</h3>
                             <div class="subheading mb-1">High school graduate</div>
                             <div>High school diploma and matriculation examination</div>
                         </div>
@@ -175,7 +180,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">SA Parolannummi</h3>
+                            <h3 class="mb-0">The Finnish Defence Forces</h3>
                             <div class="subheading mb-1">Sergeant</div>
                             <div>Non-commissioned Officer Training and Leadership Training.</div>
                         </div>
@@ -184,11 +189,10 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Yokohama Asahi-ku Wakabadai North</h3>
-                            <div>Basic japanese language skills</div>
+                            <div>Japanese language skills</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
-                    
                 </div>
             </section>
             <hr class="m-0" />
@@ -206,6 +210,7 @@
                         <img src="assets/img/unity_logo_icon_144772.png" class="logos" alt="Unity">
                         <img src="assets/img/adobe_photoshop_icon_132617.png" class="logos" alt="Photoshop">
                         <img src="assets/img/adobe_indesign_icon_132620.png" class="logos" alt="Indesign">
+                        <img src="assets/img/mysql_logo_icon_248406.png" class="logos" alt="MySql">
                     </div>
                     <!-- UNUSED SECTION
                     <ul class="list-inline dev-icons">
@@ -213,7 +218,7 @@
                         <li class="list-inline-item"><i class="fab fa-c" style="color: #000000"></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5" style="color: #000000"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square" style="color: #000000"></i></li>
-                        < <li class="list-inline-item"><i class="fab fa-node"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-node"></i></li>
                     </ul>
                     -->
                     <table>
@@ -223,11 +228,15 @@
                         </tr>
                         <tr>
                             <td>PYTHON</td>
-                            <td>2 courses and MTA 98-381</td>
+                            <td>3 courses and MTA 98-381, and personal projects</td>
                         </tr>
                         <tr>
-                            <td>C++</td>
-                            <td>2 courses and OOP course</td>
+                            <td>C++ / C</td>
+                            <td>3 courses and OOP course, and personal projects</td>
+                        </tr>
+                        <tr>
+                            <td>Database</td>
+                            <td>MySql, Bigdata Apache Spark, Pandas, Json</td>
                         </tr>
                         <tr>
                             <td>HTML, JS, CSS</td>
@@ -238,12 +247,12 @@
                             <td>CCNA ITN 1</td>
                         </tr>
                         <tr>
-                            <td>Unity &amp; C#</td>
+                            <td>Unity & C#</td>
                             <td>Game making with a team</td>
                         </tr>
                         <tr>
-                            <td>Photoshop &amp; InDesign</td>
-                            <td>Photo retouching and menu creation</td>
+                            <td>Photoshop & InDesign</td>
+                            <td>Photo retouching and advertise creation</td>
                         </tr>
                     </table>
                 </div>
@@ -258,13 +267,12 @@
                         As a perpetual student of software/web development, I embark on thrilling adventures abroad whenever I can (because debugging code isn't quite the same as exploring ancient ruins!).
                     </div>
                     <div>
-                        When confined indoors, I immerse myself in the captivating world of Japanese cinema and TV shows.
-                        But that's not all—I'm a master builder and fixer of RC cars and planes, providing endless fun for my little one.
+                        When I find myself confined indoors, I dive deep into the captivating world of Japanese cinema and TV shows.
+                        But that's not all—I'm also a skilled builder and fixer of RC cars and planes, ensuring endless fun for my little one.
                     </div>
-                        And let's not forget my commitment to being on the cutting edge of front-end and back-end development—I practically have a permanent seat in the technology realm.
-                        Oh, and did I mention I'm also a seasoned chef and restaurant owner? The kitchen is my sanctuary, where my culinary creations become works of art. ITADAKIMASU!
                     <div>
-
+                        And let's not forget I'm deeply committed to programming, with a permanent seat in the technology realm.
+                        Oh, and did I mention I'm also a seasoned chef and former restaurant owner? The kitchen is my sanctuary, where my culinary creations become works of art.
                     </div>
                 </div>
             </section>
