New Icons added, Cv in assets also modified.

--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
                         <img src="assets/img/adobe_photoshop_icon_132617.png" class="logos" alt="Photoshop">
                         <img src="assets/img/adobe_indesign_icon_132620.png" class="logos" alt="Indesign">
                         <img src="assets/img/mysql_logo_icon_248406.png" class="logos" alt="MySql">
+                        <img src="assets/img/docker_tile_logo_icon_Black.png" class="logos" alt="Docker">
+                        <img src="assets/img/Microsoft_365_black.png" class="logos" alt="ms365">
+                        <img src="assets/img/iwork_black.png" class="logos" alt="iWork">
+                        <img src="assets/img/miro_logo_icon_248450.png" class="logos" alt="miro">
+                        <img src="assets/img/jira_brands_icon_256562.png" class="logos" alt="Jira">
                     </div>
                     <!-- UNUSED SECTION
                     <ul class="list-inline dev-icons">
