New Icons added, Cv in assets also modified.

--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
                         <img src="assets/img/github-logo_icon-icons.com_73546.png" class="logos" alt="Github">
                         <img src="assets/img/unity_logo_icon_144772.png" class="logos" alt="Unity">
                         <img src="assets/img/adobe_photoshop_icon_132617.png" class="logos" alt="Photoshop">
+                    </div>
+                    <div>
                         <img src="assets/img/adobe_indesign_icon_132620.png" class="logos" alt="Indesign">
                         <img src="assets/img/mysql_logo_icon_248406.png" class="logos" alt="MySql">
                         <img src="assets/img/docker_tile_logo_icon_Black.png" class="logos" alt="Docker">
