Job tiltel chaged, education section changed. Small fixes.

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                     <h2 class="mb-6">EXPERIENCE</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Beiz Oy</h3>
-                            <a href="https://lolapanda.com/about-beiz/">About Beiz Oy</a>
-                            <div class="subheading mb-3">Game developing and testing</div>
+                            <h3 class="mb-0">Game developing and testing</h3>
+                            <a href="https://lolapanda.com/about-beiz/">Beiz Oy</a>
+                            <div class="subheading mb-3"></div>
                             <p>
                                 After conducting extensive testing of the company's game libraries in Japanese, English, and Finnish,
                                  I collaborated with my colleague to develop the game 'Lola's Fruit Sudoku' using the Unity game engine and C#.
@@ -99,8 +99,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Brunakärrs energi Oy</h3>
-                            <div class="subheading mb-3">Website and CRM</div>
+                            <h3 class="mb-0">Website and CRM</h3>
+                            <div class="subheading mb-3">Brunakärrs energi Oy</div>
                             <p>
                                 I established a legal company specializing in energy solutions, where I managed website development and CRM.
                                 Additionally, I designed a user-friendly customer management system to facilitate effortless customer registration and relationship management.
@@ -110,8 +110,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Oy Findaco Ltd</h3>
-                            <div class="subheading mb-3">I work as a CEO / entrepreneur and handle the following tasks:</div>
+                            <h3 class="mb-0">CEO & entrepreneur</h3>
+                            <div class="subheading mb-3">Oy Findaco Ltd</div>
                             <table>
                                 <tr>
                                     <th>Task</th>
@@ -123,7 +123,7 @@
                                 </tr>
                                 <tr>
                                     <td>Website</td>
-                                    <td>Creating and maintaining websites with Wix</td>
+                                    <td>Creating and maintaining websites</td>
                                 </tr>
                                 <tr>
                                     <td>Design and implementation of restaurant management system</td>
@@ -155,43 +155,27 @@
                     <h2 class="mb-6">EDUCATION</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">TAMK - University of Applied Sciences</h3>
-                            <div class="subheading mb-1">Bachelor of Engineering in ICT</div>
-                            <div>Major: Computer Science and software development</div>
-                            <div>Secondary focus: Embedded Systems</div>
+                            <h3 class="mb-0">Bachelor of Engineering in ICT</h3>
+                            <div class="subheading mb-1">TAMK - University of Applied Sciences</div>
+                            <div>Software development and embedded systems</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">In progress since 8/2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">8/2022 - </span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">TPA / SASKY Municipal Education and Training Consortium</h3>
-                            <div class="subheading mb-1">Software developer</div>
+                            <h3 class="mb-0">Software developer</h3>
+                            <div class="subheading mb-1">TPA / SASKY Municipal Education and Training Consortium</div>
                             <div>Vocational qualification in Information and Communications Technology</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Completed 08/2020 - 12/2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">08/2020 - 12/2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Tampere Arts-Oriented Senior Secondary School (TYK)</h3>
-                            <div class="subheading mb-1">High school graduate</div>
-                            <div>High school diploma and matriculation examination</div>
+                            <h3 class="mb-0">Sergeant</h3>
+                            <div class="subheading mb-1">The Finnish Defence Forces</div>
+                            <div>Non-commissioned Officer Training and Leadership Training</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">The Finnish Defence Forces</h3>
-                            <div class="subheading mb-1">Sergeant</div>
-                            <div>Non-commissioned Officer Training and Leadership Training.</div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Yokohama Asahi-ku Wakabadai North</h3>
-                            <div>Japanese language skills</div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"></span>2000 - 2001</div>
                     </div>
                 </div>
             </section>
@@ -243,11 +227,11 @@
                         </tr>
                         <tr>
                             <td>Database</td>
-                            <td>MySql, Bigdata Apache Spark, Pandas, Json</td>
+                            <td>MySql, Bigdata Apache Spark, Pandas</td>
                         </tr>
                         <tr>
                             <td>HTML, JS, CSS</td>
-                            <td>Basic web and responsive design, API fetch, charts, etc.</td>
+                            <td>Basic web sites, responsive design, API fetch, charts</td>
                         </tr>
                         <tr>
                             <td>CISCO NET. ACADEMY</td>
