Job tiltel chaged, education section changed. Small fixes.

--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Game developing and testing</h3>
+                            <!--
                             <a href="https://lolapanda.com/about-beiz/">Beiz Oy</a>
-                            <div class="subheading mb-3"></div>
+                            -->
+                            <div class="subheading mb-3">Beiz Oy</div>
                             <p>
                                 After conducting extensive testing of the company's game libraries in Japanese, English, and Finnish,
                                  I collaborated with my colleague to develop the game 'Lola's Fruit Sudoku' using the Unity game engine and C#.
