CV_FIXED to english, icon s updated

--- a/index.html
+++ b/index.html
@@ -188,22 +188,25 @@
                     <h2 class="mb-6">WORKING&nbsp;KNOWLEDGE&nbsp;OF</h2>
                     <div class="h3">Working knowledge of programming Languages & Tools</div>
                     <div>
-                        <img src="assets/img/brand_python_icon_157826.png" class="logos" alt="python">
-                        <img src="assets/img/cplusplus_logo_icon_247265.png" class="logos" alt="C++">
-                        <img src="assets/img/2333390-html-html5-internet-website_85590.png" class="logos" alt="HTML">
-                        <img src="assets/img/javascript_logo_icon_145155.png" class="logos" alt="Javascript">
-                        <img src="assets/img/github-logo_icon-icons.com_73546.png" class="logos" alt="Github">
-                        <img src="assets/img/unity_logo_icon_144772.png" class="logos" alt="Unity">
-                        <img src="assets/img/adobe_photoshop_icon_132617.png" class="logos" alt="Photoshop">
+                        <img src="assets/icons/python_icon.png" class="logos" alt="python">
+                        <img src="assets/icons/cplus_icon.png" class="logos" alt="C++">
+                        <img src="assets/icons/c%23_icon.png" class="logos" alt="C#">
+                        <img src="assets/icons/html5_icon.png" class="logos" alt="HTML">
+                        <img src="assets/icons/css_icon.png" class="logos" alt="CSS">
                     </div>
                     <div>
-                        <img src="assets/img/adobe_indesign_icon_132620.png" class="logos" alt="Indesign">
-                        <img src="assets/img/mysql_logo_icon_248406.png" class="logos" alt="MySql">
-                        <img src="assets/img/docker_tile_logo_icon_Black.png" class="logos" alt="Docker">
-                        <img src="assets/img/Microsoft_365_black.png" class="logos" alt="ms365">
-                        <img src="assets/img/iwork_black.png" class="logos" alt="iWork">
-                        <img src="assets/img/miro_logo_icon_248450.png" class="logos" alt="miro">
-                        <img src="assets/img/jira_brands_icon_256562.png" class="logos" alt="Jira">
+                        <img src="assets/icons/javascript_icon.png" class="logos" alt="Javascript">
+                        <img src="assets/icons/java_icon.png" class="logos" alt="Java">
+                        <img src="assets/icons/mysql_icon2.png" class="logos" alt="MySql">
+                        <img src="assets/icons/pandas_icon.png" class="logos" alt="Pandas">
+                        <img src="assets/icons/docker_icon.png" class="logos" alt="Docker">
+                    </div>
+                    <div>
+                        <img src="assets/icons/vscode_icon.png" class="logos" alt="VSCode">
+                        <img src="assets/icons/jetbrains_icon.png" class="logos" alt="JetBrains">
+                        <img src="assets/icons/arduino_icon.png" class="logos" alt="arduino IDE">
+                        <img src="assets/icons/github_icon.png" class="logos" alt="Git">
+                        <img src="assets/icons/aws_icon.png" class="logos" alt="AWS">
                     </div>
                     <!-- UNUSED SECTION
                     <ul class="list-inline dev-icons">
